assets/css/style.css
body {
    background-color: #8fc1e3;
    font-family: 'Cabin', sans-serif;
}

header {
    padding: 2rem;
    background-color: #31708E;
    color: #f7f9fb;
    margin-bottom: 1rem;
}

section {
    margin: 5rem;
    padding-right: 5rem;
}

.instruction-button {
    margin-bottom: 2rem;
    height: 4rem;
    background-color: #31708E;
}

.instruction-button:hover {
    background-color: #31708E;
}

.jumbotron,
.percentages {
    display: none;
    background-color: #5085a5;
    color: #f7f9fb;
}

.percentages {
    border-radius: .3rem;
    text-align: center;
    margin-left: 3rem;
}

.heading-button {
    width: 90%;
    background-color: #5085a5;
    color: #f7f9fb;
    border: 1px black solid;
    border-radius: 5px;
    margin-top: 3rem;
    margin-bottom: 0;
    min-height: 3rem;
    padding: 1rem;
}

.charts {
    margin-top: 3rem;
}

.bar-chart, .pie-chart {
    width: 100%;
    overflow: scroll;
}

footer {
    margin: 0;
    margin-top: 3rem;
    padding: 1rem;
    background-color: #687864;
    color: #f7f9fb;
    position: relative;
}

#footer-writing {
    display: block;
}

@media (min-width: 576px){
    #footer-writing {
        float: left;
        line-height: 5rem;
    }
}

@media (min-width: 576px) {
    #reset-button,
    #btt-button {
        float: right;
    }
}

#reset-button,
#btt-button {
    margin: 1rem;
    background-color: #f7f9fb;
    color: #687864;
}

#btt-button a {
    color: #687864;
}

#btt-button a:hover {
    text-decoration: none;
}

/* Rotate labels at bottom of bar charts */

#chart-one .x.axis text {
    text-anchor: end !important;
    transform: rotate(-45deg);
}

#chart-two .x.axis text {
    text-anchor: end !important;
    transform: rotate(-90deg);
}

